--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,55 +1,17 @@
 name: "Build & Release"
 on:
+  release:
+    types: [published]
   pull_request:
     branches:
       - master
   push:
     branches:
-      - master
+      - code-refactor
 jobs:
-  # build-android:
-  #   name: Test, Build & upload aab
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: actions/setup-java@v2
-  #       with:
-  #         distribution: 'temurin'
-  #         java-version: '8'
-  #     - uses: subosito/flutter-action@v2
-  #       with:
-  #         flutter-version: '2.10.1'
-  #         channel: 'stable'
-  #     - name: Increment Build number
-  #       run: perl -i -pe 's/^(version:\s+\d+\.\d+\.\d+\+)(\d+)$/$1.(${{github.run_number}})/e' pubspec.yaml
-  #     - name: Get Flutter Pub
-  #       run: flutter pub get
-  #     - run: flutter pub get
-  #     # - run: flutter test 
-  #     - name: Decoding android/key.properties
-  #       run: echo "${{ secrets.KEYPROP_PROD }}" | base64 --decode > android/key.properties
-  #     - name: Decoding android/neumodore_key.jks
-  #       run: echo "${{ secrets.KEYJKS_PROD }}" | base64 --decode > android/app/key.jks
-  #     - arun: flutter build appbundle --release --no-sound-null-safety
-  #     - name: upload aab to artifacts
-  #       uses: actions/upload-artifact@v1
-  #       with:
-  #         name: app-release-aab
-  #         path: 'build/app/outputs/bundle/release/app-release.aab'
-  #     - name: upload mapping file to artifacts
-  #       uses: actions/upload-artifact@v1
-  #       with:
-  #         name: android-mapping
-  #         path: 'build/app/outputs/mapping/release/mapping.txt'
-  #     # - name: Upload to slack step
-  #     #   uses: adrey/slack-file-upload-action@master
-  #     #   with:
-  #     #     token: ${{ secrets.SLACK_WEBHOOK }}
-  #     #     path: 'build/app/outputs/bundle/app-release.aab'
-  #     #     channel: healthconnector
-  build-ios:
-    name: Test, Build & upload ipa
-    runs-on: macos-latest
+  build-android:
+    name: Test, Build & upload aab
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
@@ -58,166 +20,157 @@ jobs:
           java-version: '8'
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '2.10.1'
+          flutter-version: '3.3.2'
           channel: 'stable'
-      - name: Increment Build number
-        run: perl -i -pe 's/^(version:\s+\d+\.\d+\.\d+\+)(\d+)$/$1.(${{github.run_number}})/e' pubspec.yaml
       - name: Get Flutter Pub
         run: flutter pub get
-      - name: Build iOS App
-        run: |
-          flutter build ios --no-codesign --no-sound-null-safety
-          cd build/ios/iphoneos
-          mkdir Payload
-          cd Payload
-          ln -s ../Runner.app
-          cd ..
-          zip -r app.ipa Payload
-      # - name: upload ipa to artifacts
-      #   uses: actions/upload-artifact@v1
-      #   with:
-      #     name: app-release-ipa
-      #     path: 'build/ios/iphoneos/app.ipa'
-      #     if-no-files-found: echo "app.ipa not found"
+      - name: Decoding android/key.properties
+        run: echo "${{ secrets.KEYPROP_PROD }}" | base64 --decode > android/key.properties
+      - name: Decoding android/neumodore_key.jks
+        run: echo "${{ secrets.KEYJKS_PROD }}" | base64 --decode > android/app/key.jks
+      - arun: flutter build appbundle --release
+      - name: upload aab to artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: app-release-aab
+          path: 'build/app/outputs/bundle/release/app-release.aab'
+      - name: upload mapping file to artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: android-mapping
+          path: 'build/app/outputs/mapping/release/mapping.txt'
+  build-ios:
+    name: Build IOS
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: master
+      - name: add java
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '8'
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.3.2'
+          channel: 'stable'
       - name: Setup Ruby (bundle)
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.6
           bundler-cache: true
-      # - name: Restore Pods cache
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: |
-      #       ios/Pods
-      #       ~/Library/Caches/CocoaPods
-      #       ~/.cocoapods
-      #     key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-pods-
-      # - name: Install Pods
-      #   run: cd ios && pod install --repo-update && cd ..
-      - name: Build IOS App
-        uses: yukiarrr/ios-build-action@v1.5.0
+      - name: Install Python
+        uses: actions/setup-python@v4
         with:
-          project-path: ios/Runner.xcodeproj
-          p12-base64: ${{ secrets.P12_BASE64 }}
-          mobileprovision-base64: ${{ secrets.MOBILEPROVISION_BASE64 }}
-          code-signing-identity: "iPhone Distribution"
-          team-id: ${{ secrets.TEAM_ID }}
-          workspace-path: ios/Runner.xcworkspace
-          scheme: "Runner"
-      - name: Rename ipa
-        run:  mv output.ipa app.ipa
+          python-version: '3.10'
+      - name: install pbxproj
+        run: pip install pbxproj
+      - name: Install the Apple certificate and provisioning profile
+        env:
+          P12_BASE64: ${{ secrets.P12_BASE64 }}
+          MOBILEPROVISION_BASE64: ${{ secrets.MOBILEPROVISION_BASE64 }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+        run: |
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+          P12_PASSWORD=""
+          # import certificate and provisioning profile from secrets                                                                                                              
+          echo -n "$P12_BASE64" | base64 --decode --output $CERTIFICATE_PATH
+          echo -n "$MOBILEPROVISION_BASE64" | base64 --decode --output $PP_PATH
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+          # apply provisioning profile
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+      - name: Get Flutter Pub
+        run: flutter pub get
+      - name: Restore Pods cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ios/Pods
+            ~/Library/Caches/CocoaPods
+            ~/.cocoapods
+          key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
+      - name: Install Pods
+        run: cd ios && pod install --repo-update && cd ..
+      - name: setup for Manul code sign
+        run: python code_sign.py ${{ secrets.TEAM_ID }} ${{ secrets.APPSTORE_ISSUER_ID }} ${{ secrets.MOBILEPROVISION_NAME }}
+      - name: update export options for manual provisioning
+        run:  /usr/libexec/PlistBuddy -c 'Add :provisioningProfiles:ai.healthconnector.mobileapp string ${{ secrets.MOBILEPROVISION_NAME }}' ios/export-options.plist
+      - name: create ipa
+        run: flutter build ipa --export-options-plist=ios/export-options.plist --release $ARGS
+        env:
+          GIT_COMMIT_DATE: $(git log -n1 --date=short --format="%ad")
+          GIT_COMMIT_HASH: $(git log -n1 --date=short --format="%h")
+          FLUTTER_VERSION: ${$(flutter --version):8:6}
+          ARGS: "--dart-define=GIT_COMMIT_DATE=$GIT_COMMIT_DATE --dart-define=GIT_COMMIT_HASH=$GIT_COMMIT_HASH --dart-define=FLUTTER_VERSION=${FLUTTER_VERSION}"
       - name: upload ipa
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
-          name: app-release-ipa
-          path: app.ipa
-  # testlab:
-  #   name: Run UI tests with Firebase Test Lab
-  #   needs: build-android
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Download app APK
-  #       uses: actions/download-artifact@v1
-  #       with:
-  #         name: app-release-apk
-      
-  #     - name: 'Auth Google CLI'
-  #       uses: 'google-github-actions/auth@v0'
-  #       with:
-  #         credentials_json: '${{ secrets.GCP_FIREBASE_CEREDENTIALS }}'
-
-  #     - name: Login to Google Cloud
-  #       uses: google-github-actions/setup-gcloud@v0
-  #       with:
-  #         version: '270.0.0'
-  #         service_account_key: ${{ secrets.GCP_FIREBASE_CEREDENTIALS }}
-
-  #     - name: Run Robo Tests in Firebase Test Lab
-  #       run: gcloud firebase test android run --type robo --app app-release-apk/app-release.apk
-  # deploy-playstore:
-  #   name: 'Upload Android build to PlayStore console'
-  #   needs: [build-android]
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Download app bundle from artifacts
-  #       uses: actions/download-artifact@v1
-  #       with:
-  #         name: app-release-aab
-  #     - name: Download android mapping from artifacts
-  #       uses: actions/download-artifact@v1
-  #       with:
-  #         name: android-mapping
-  #     # - name: Add whatsnew message CA
-  #     #   run: echo ${{ github.event.head_commit.message }} >> ./whatsNewDirectory/whatsnew-en-CA
-  #     # - name: Add whatsnew message US
-  #     #   run: echo ${{ github.event.head_commit.message }} >> ./whatsNewDirectory/whatsnew-en-US
-  #     - name: Upload Abb Bundle
-  #       uses: r0adkll/upload-google-play@v1.0.15
-  #       with:
-  #         serviceAccountJson: service_account.json
-  #         packageName: ai.healthconnector.mobileapp
-  #         releaseFiles: app-release-aab/*.aab
-  #         track: internal
-  #         inAppUpdatePriority: 5
-  #         # userFraction: 1.0
-  #         # whatsNewDirectory: whatsNewDirectory/whatsnew
-  #         mappingFile:  android-mapping/mapping.txt
-  deploy-TestFlight:
-    name: 'Upload app to TestFlight'
-    needs: [build-ios]
+          name: ipa-production-release
+          path: ./build/ios/ipa/app.ipa
+  upload_testflight:
+    name: TestFlight upload
+    needs: build-ios
     runs-on: macos-latest
-
     steps:
-      - name: Download ipa from artifacts
+      - uses: actions/checkout@v3
+        with:
+          ref: master
+      - name: Download ipa
         uses: actions/download-artifact@v1
         with:
-          name: app-release-ipa
-      - uses: apple-actions/upload-testflight-build@v1
-        with: 
-          app-path: 'app-release-ipa/app.ipa' 
+          name: ipa-production-release
+      - name: Upload app to TestFlight
+        uses: apple-actions/upload-testflight-build@v1
+        with:
+          app-path: ./ipa-production-release/app.ipa
           issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
           api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
           api-private-key: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
   # release:
   #   name: release
-  #   needs: [deploy-playstore, deploy-TestFlight]
+  #   needs: [upload_testflight]
   #   runs-on: ubuntu-latest
 
   #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Download aab from artifacts
+  #     - uses: actions/checkout@v3
+  #       with:
+  #         ref: master
+  #     - name: Download ipa
   #       uses: actions/download-artifact@v1
   #       with:
-  #         name: app-release-aab
-  #     - name: Download ipa from artifacts
-  #       uses: actions/download-artifact@v1
-  #       with:
-  #         name: app-release-ipa
+  #         name: ipa-production-release
   #     - name: Push to Releases
   #       uses: ncipollo/release-action@v1
   #       with:
-  #         artifacts: "app-release-aab/app-release.aab, app-release-ipa/app.ipa"
-  #         tag: v1.0.${{ github.run_number }}
+  #         allowUpdates: true
+  #         artifacts: "./ipa-production-release/app.ipa"
   #         token: ${{ secrets.GITHUB_TOKEN }}
-  slackNotification:
-        name: Slack Notification
-        needs: [deploy-TestFlight]
-        runs-on: ubuntu-latest
-        steps:
-        - uses: actions/checkout@v2
-        - name: Slack Notification
-          uses: rtCamp/action-slack-notify@v2
-          env:
-            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-            SLACK_USERNAME: Production release
-            SLACK_COLOR: ${{ job.status }}
-            SLACK_ICON: https://firebasestorage.googleapis.com/v0/b/livvinyl-health-connector.appspot.com/o/logo.png?alt=media&token=370f338d-c0da-48a4-8a47-2dd1c5aac75d
-            SLACK_FOOTER: Powered by Livvinyl Inc
-            SLACK_MESSAGE: 'New Release for Android & IOS is Available for Testing Link-Android: https://play.google.com/apps/internaltest/4701654924397076080 Link-IOS: https://testflight.apple.com/join/Dmpagn2y'
+  # slackNotification:
+  #       name: Slack Notification
+  #       needs: [upload_testflight]
+  #       runs-on: ubuntu-latest
+  #       steps:
+  #       - uses: actions/checkout@v2
+  #       - name: Slack Notification
+  #         uses: rtCamp/action-slack-notify@v2
+  #         env:
+  #           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+  #           SLACK_USERNAME: Production release
+  #           SLACK_COLOR: ${{ job.status }}
+  #           SLACK_ICON: https://firebasestorage.googleapis.com/v0/b/livvinyl-health-connector.appspot.com/o/logo.png?alt=media&token=370f338d-c0da-48a4-8a47-2dd1c5aac75d
+  #           SLACK_FOOTER: Powered by Livvinyl Inc
+  #           SLACK_MESSAGE: 'New Release for Android & IOS is Available for Testing Link-Android: https://play.google.com/apps/internaltest/4701654924397076080 Link-IOS: https://testflight.apple.com/join/Dmpagn2y'
             
