--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,6 +36,7 @@ android {
     compileSdkVersion 33
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -49,31 +50,32 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled true
         applicationId "ai.healthconnector.mobileapp"
         minSdkVersion 23
-        targetSdkVersion 31
+        targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
 
     signingConfigs {
-       release {
-           keyAlias keystoreProperties['keyAlias']
-           keyPassword keystoreProperties['keyPassword']
-           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-           storePassword keystoreProperties['storePassword']
-       }
+        release {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword keystoreProperties['storePassword']
+        }
    }
 
        buildTypes {
        release {
-           signingConfig signingConfigs.release
+            signingConfig signingConfigs.release
 
             applicationVariants.all { variant ->
                 variant.outputs.all {
                     def newName
                         newName = "HealthConnector_V" + versionName
-      
+
                     outputFileName = newName+outputFileName.substring(3)
                 }
             }
@@ -87,4 +89,7 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 }
+
+apply plugin: 'com.google.firebase.crashlytics'
