--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,13 @@ dependencies:
 
   # google_ml_kit: ^0.7.3
   camera: ^0.9.4+19
-  firebase_messaging: ^13.1.0
-  firebase_core: ^1.11.0
-  firebase_database: ^9.0.20
-  permission_handler: ^10.1.0
+  firebase_messaging: ^14.4.0
+  firebase_core: ^2.9.0
+  firebase_database: ^10.1.0
+  permission_handler: ^10.2.0
   flutter_tts: ^3.2.3
   google_fonts: ^2.1.0
-  firebase_auth: ^3.3.13
+  firebase_auth: ^4.4.0
   animated_button: ^0.2.0
   cached_network_image: ^3.2.0
   shared_preferences: ^2.0.11
@@ -33,13 +33,17 @@ dependencies:
   octo_image: ^1.0.1
   blurhash_dart: ^1.1.0
   image: ^3.1.3
-  firebase_storage: ^10.2.12
+  firebase_storage: ^11.1.0
   circular_countdown_timer: ^0.2.2
   persistent_bottom_nav_bar: ^4.0.2
   google_mlkit_pose_detection: ^0.3.0
   google_mlkit_translation: ^0.3.0
   flutter_cache_manager: ^3.3.0
-  agora_uikit: ^1.0.2
+  package_info_plus: ^1.0.5
+  agora_uikit: ^1.1.2
+  age_calculator: ^1.0.0
+  mailto: ^2.0.0
+  fluttertoast: ^8.2.1
   flutter_firebase_chat_core: ^1.6.3
   file_picker: ^4.6.0
   flutter_chat_ui: ^1.6.4
@@ -49,11 +53,17 @@ dependencies:
   share_plus: ^4.0.10
   path_provider: ^2.0.11
   percent_indicator: ^4.2.2
+  flutter_ringtone_player: ^3.2.0
   syncfusion_flutter_charts: ^20.1.61
   fl_chart: ^0.55.0
   font_awesome_flutter: ^10.1.0
+  flutter_local_notifications: ^12.0.1
   native_ar_viewer: ^0.0.1
+#  connectycube_flutter_call_kit: ^2.2.3
+  firebase_crashlytics: ^3.1.0
   flutter_downloader: ^1.8.0+1
+  connectycube_sdk: ^2.4.1
+#  agora_rtc_engine: ^6.1.0
   quick_look: ^0.0.4
   video_player: ^2.4.5
   awesome_notifications: ^0.6.21
@@ -72,7 +82,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   wakelock: ^0.6.2
   circular_progress_indicator:
-    path: ./plugins/circular_progress_indicator
+    path:  ./plugin/circular_progress_indicator
 
 
 flutter_icons:
@@ -109,4 +119,3 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-
